fix: sw-precache angularFire2 oauth issue

--- a/src/index.html
+++ b/src/index.html
@@ -28,14 +28,15 @@
 
   <script>
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/sw.js', { scope: '/' })
+      navigator.serviceWorker.register('/service-worker.js')
         
       .then((registration) => {
 
-        console.log('Service Worker registered');
-      }).catch((err) => {
+        console.log('SW registered');
+      })
+      .catch((err) => {
 
-        console.log('Service Worker registration failed: ', err);
+        console.log('SW error', err);
       });
     }
   </script>
