style: frontend style improvements

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,9 @@
 </head>
 <body>
 
+
   <app-root></app-root>
+
 
   <div class="loading">
     <h1>~$ bootstrapping firestarter...</h1>
@@ -42,5 +44,6 @@
   </script>
   
 
+</body>
 </body>
 </html>
