refactor: main-nav

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <meta charset="utf-8">
   <title>firestarter</title>
   <base href="/">
@@ -12,5 +14,9 @@
 </head>
 <body>
   <app-root></app-root>
+
+  <div class="loading">
+    <h1>~$ loading firestarter...</h1>
+  </div>
 </body>
 </html>
