--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
     <meta charset="utf-8">
-    <title>Firestarter</title>
+    <title>Leaderboard</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -14,12 +14,10 @@
 </head>
 
 <body>
-
     <app-root></app-root>
 
-
     <div class="loading">
-        <h1>~$ loading firestarter...</h1>
+        <h1>~$ loading leaderboard...</h1>
     </div>
 </body>
 
